src/main/terraform/02_01_kubernetes/remote_resource/apps/keycloak/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-0-external
  namespace: ns-keycloak
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-target-type: "ip"
    service.beta.kubernetes.io/aws-load-balancer-type: "alb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  type: LoadBalancer
  ports:
    - name: keycloak
      port: 8080
      targetPort: 8080
  selector:
    app: keycloak
